--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Playing around with the Flutterwave APIs.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src --out-dir dist",
+    "dev": "babel-node -r dotenv/config src/app",
+    "start": "node dist/app"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,15 @@
   "bugs": {
     "url": "https://github.com/MlkMahmud/flutterwave-book-store/issues"
   },
-  "homepage": "https://github.com/MlkMahmud/flutterwave-book-store#readme"
+  "homepage": "https://github.com/MlkMahmud/flutterwave-book-store#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
+    "dotenv": "^8.2.0"
+  }
 }
