--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/MlkMahmud/flutterwave-book-store#readme",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1"
   },
   "devDependencies": {
