--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src --out-dir dist",
+    "build:css": "NODE_ENV=production tailwind build -o src/public/styles.css",
     "dev": "babel-node -r dotenv/config src/app",
     "start": "node dist/app"
   },
@@ -22,7 +23,8 @@
   "homepage": "https://github.com/MlkMahmud/flutterwave-book-store#readme",
   "dependencies": {
     "ejs": "^3.1.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "tailwindcss": "^1.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
