--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/MlkMahmud/flutterwave-book-store#readme",
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
@@ -40,6 +41,7 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.6.0",
