--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Playing around with the Flutterwave APIs.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel server --out-dir dist/",
+    "build": "babel server --out-dir dist --copy-files",
     "start": "node dist/",
     "dev": "babel-node -r dotenv/config server/"
   },
@@ -41,7 +41,9 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-regenerator": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.6.0",
